corrected tests for HighScore